2011-01-02  Ilija Kocho  <ilijak@siva.com.mk>

	* src/ecos/sequential.c, src/ecos/simple.c: Fixed miltiple-line
	comment warnings.

2010-12-10  Christophe Coutand  <ccoutand@stmi.com>

	* include/lwipopts.h: Fix compilation error when compiling SNMP
	code.

2010-08-02  John Dallaway  <john@dallaway.org.uk>

	* include/network.h: Match braces when including from C++ code.
	Issue reported by Will Wagner.

2010-02-07  John Dallaway  <john@dallaway.org.uk>

	* cdl/lwip_net.cdl: Rename CFLAGS_ADD and CFLAGS_REMOVE options to
	match package macro name.

2010-01-25  Simon Kallweit  <simon.kallweit@intefo.ch>

	* all: Updated to lwIP 1.3.2

2007-03-22  John Eigelaar  <jeigelaar@mweb.co.za>
                                                     
	* include/lwip/netif.h, include/lwip/inet.h: Added externC macro
	to public fucntions to make them C++ compliant.

2006-05-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ecos/init.c (arp_timer): Only compile this function when
	Ethernet is supported.
	* include/lwipopts.h: PAP_SUPPORT & CHAP_SUPPORT must be either 0
	or 1 otherwise we get compiler errors.
	
2006-03-26  Uwe Kindler <uwe_kindler@web.de>

	* Updated the complete lwIP source to the latest lwIP
	CVS version 1.1.1
	* src/ecos/init.c Added call to netif_set_up(netif) in
	function lwip_set_addr() - this is required since lwIP
	version 1.0.0
	* cdl/lwip_net.cdl Minor modifications for UDP configuration
	options. Renamed CYGNUM_LWIP_TCPIP_THREAD_PRIORITY to
	CYGNUM_LWIP_NETWORK_THREAD_PRIORITY and moved option outside
	CYGPKG_LWIP_TCPIP component because the network thread needs to
	run in all configurations.
	* tests/nc_slave.c
	* tests/tcpecho.c 
	* tests/udpecho.c
	* tests/sockets.c
	* tests/httpd.c Added eCos test infrastructure to tests and 
	made tests applicable depending on lwip configuration.

2006-03-15  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/nc_test_slave.c (nc_slave): Fix some of the compiler
	warnings.

2006-03-13  Uwe Kindler <uwe_kindler@web.de>
